# auto-pico-to-tcpip

./: .gitmodules  README.md
.github/workflows/: main.yml
adb_host/: CMakeLists.txt  adb.c  adb.h  main.c  pio_usb_config.h
